--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
-*
-!*.m
-!MatlabDB_avi*
-!cur*.mat
+*.mat
+*.txt
+*.pdf
+*.asv
+*.log
+*.fig
+*.dat
+*.xls*
+*.c
+*.h
+*.raw
+*.rar
+*.eps
+*.zip
+*.png
+
+src*
+Demo/*
+linux64/*
+do_Max*
+klustakwik_test/*
+smooth_test/*
+linux64/*
+test/*
+test_oe/*
+tmp/*
+tmp2/*
+tmp3/*
+forJosh/*
+MatlabDB/*
+fromTanya/*
+*.exe
+fromSergei/*
+fromAndrei/*
+RatHC/*
+Figures/*
+spikeSorting*
+~old*
